# machine-learning-zoomcamp

./: .gitignore  Homework08.ipynb  homework09.ipynb
cohorts/2024/01-intro/: homework01.ipynb  homework01.md
cohorts/2024/02-regression/: homework02.ipynb
cohorts/2024/03-classification/: homework03.ipynb
cohorts/2024/04-evaluation/: homework04.ipynb
cohorts/2024/05-deployment/homework/: Dockerfile  app.py  deployment.yaml  homework05.ipynb  q6_test.py  requirements.txt
cohorts/2024/06-trees/: homework06.ipynb
cohorts/2024/08-deep-learning/: requirements.txt
cohorts/2024/09-serverless/: Dockerfile  lambda_handler.py  requirements.txt
cohorts/2024/MLZoomcampCapstone1/: .replit  README.md  app.py  bentofile.yaml  notebook.ipynb  predict.py  pyproject.toml  replit.nix  requirements.txt  train.py
cohorts/2024/MLZoomcampCapstone1/.streamlit/: config.toml
cohorts/2024/MLZoomcampCapstone2/: Dockerfile  README.md  notebook.ipynb  predict.py  requirements.txt
midproject/: Dockerfile  README.md  curl.py  predict.py  requirements.txt  train.py
