[project]
name = "repl-nix-mlzoomcampcapstone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.3.16",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.0",
]
